<resources>
    <string name="app_name">TicTacToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="computer">Computer</string>
    <string name="human">Human</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="Player_2">HUMAN 2</string>
    <string name="Random">Random</string>
    <string name="Choose1">Choose </string>
    <string name="Start">Start</string>
    <string name="reset_scores">Reset Scores</string>
</resources>