<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/linear_human_score"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_main_score_human_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_main_score_human"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="0" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_main_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/tictactoe"
        android:textSize="34sp" />

    <LinearLayout
        android:id="@+id/linear_player2_score"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_main_score_computer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_main_score_computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="0" />
    </LinearLayout>
</LinearLayout>